--- a/themes/alpha-dust/layout/_partial/head.ejs
+++ b/themes/alpha-dust/layout/_partial/head.ejs
@@ -88,6 +88,6 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.min.css" type="text/css" rel="stylesheet" />
 
     <!-- Custom CSS -->
-    <%- css('myBlog/css/style.css') %>
+    <%- css('css/style.css') %>
 
 </head>
