更新样式呀

--- a/themes/alpha-dust/source/css/_partial/code.styl
+++ b/themes/alpha-dust/source/css/_partial/code.styl
@@ -1,5 +1,6 @@
 code
-  color $greyTextColor
+  color aliceblue !important
+  text-shadow 0 0 1px #ffffff, 0 0 2px #51b732
   background rgba(144, 144, 144, 0.1)
 
 figure.highlight
