--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -552,7 +552,8 @@ footer.footer-content .footer-copyright {
   font-size: 0.7em;
 }
 code {
-  color: #a9b7c6;
+  color: #f0f8ff !important;
+  text-shadow: 0 0 1px #fff, 0 0 2px #51b732;
   background: rgba(144,144,144,0.1);
 }
 figure.highlight {
